--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <script>
 // PASSWORD PROTECTION
-const password = "mypassword"; // set your password here
+const password = "NURSERESUME2025"; // set your password here
 const userInput = prompt("Enter password to access this page:");
 if (!userInput || userInput !== password) {
     document.body.innerHTML = "<h1>Access Denied</h1>";
