--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 <script>
 // PASSWORD PROTECTION
-const password = "mypassword"; // change this
+const password = "NURSERESUME2025"; // change this
 const userInput = prompt("Enter password to access this page:");
 
 if(userInput === password){
